src/assets/styles/main.css
@import './base.css';
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  display: flex;
  justify-content: center;
  align-items: center;
}

.app-md-portfolio {
  min-height: 500px;
}

a {
  font-family: 'Inter', serif;
  color: var(--vt-c-black);
  text-decoration: none;
}

.title {
  font-family: 'Libre Baskerville', serif;
  font-weight: 700;
}

h2{
  font-family: 'Libre Baskerville', serif;
}

.subtitle {
  font-family: 'Inter', sans-serif;
}

.contact {
  width: 100%;
}
.container-get-in-touch {
  width: 100%;
  display: flex;
}

.get-in-touch, .discover-work {
  font-family: 'Inter', sans-serif;
  width: fit-content;
  text-align: left;
}
.project-tags h3.subtitle {
  width: fit-content;
  margin-bottom: 3em;
}

.links::after {
  content: '';
  position: absolute;
  width: 38px;
  transform: scaleX(0);
  height: 2px;
  left: 0%;
  bottom: 0px;
  background: -webkit-linear-gradient(0deg, rgb(96, 137, 248) -10%, rgb(43,220,90) 110%);
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.links:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

header {
  line-height: 1.5;
  max-height: 100vh;
  display: flex;
  flex-direction: column;
}
.header-container {
  width: 100%;
}
.nav-container{
  color: var(--color-text);
  background: var(--color-background-soft);
  position: fixed;
  bottom: 0px;
  margin-bottom: 5.5em;
  width: auto;
  display: flex;
  align-items: flex-start;
  justify-content: center;
  padding: 1em .5em;
  border: 1px solid var(--color-border);
  border-radius: 8px;
  z-index: 10;
}

.nav-container .navbar {
  display: flex;
  flex-direction: row;
}

.nav-container .navbar .nav-link {
  width: calc(100%/3);
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.contact-link {
  margin-right: 7px;
}

.introduction {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items:center;
}
.introduction svg.home-logo {
  width: 100%;
  margin-bottom: 3rem;
  fill:#1D1D1B;
}

.bold {
  font-weight:700;
}

.light-grey {
  color: var(--vt-c-text-light-2);
}

a.nav-link::after {
  content: '';
  position: absolute;
  width: 38px;
  transform: scaleX(0);
  height: 2px;
  left: 18px;
  bottom: 0px;
  background: -webkit-linear-gradient(0deg, rgb(96, 137, 248) -10%, rgb(43,220,90) 110%);
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

a.nav-link:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

a.nav-link:active {
  transform: scaleX(1);
  transform-origin: bottom left; 
}

.works {
  width: 100%;
}

.filters-container {
  display: inline-flex;
  margin-bottom: 2em;
  justify-content: center;
  align-items: center;
}

.filters-container .subtitle {
  margin-right: 0.6em;
}

.filters-select {
  padding: 0.25em;
  background-color: var(--color-background-soft);
  border: 1px solid var(--color-border);
  border-radius: var(--border-radius-sm);
}

.works-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: left;
  align-items: center;  
}

.single-project {
  padding: 1rem;
  border: 1px solid var(--color-border);
  max-width: 100%;
  margin: 0 1em 1em 0;
  width: calc(100% - 1em);
  border-radius: var(--border-radius-sm);
  transition: ease-in-out 1s;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
}

.single-project:hover{
  transition: ease-in-out .5s;

}
.single-project .project-title {
  font-family: 'Libre Baskerville', serif;
  font-weight: 700;

}
.project-tags span.single-tag {
  margin-right: 0.4em;
  font-size: 0.85em;
}

.project-tags {
  margin-bottom:.5em;
}

h2.client {
  margin-bottom: .6em;
}

.for-subtitle {
  font-size: 0.7em;
}

.see-it-live {
  margin-bottom: 3em;
  max-width: 180px;
  min-height: 25px;
}

.see-it-live .links::after {
  bottom: -2px;
}

.live-link {
  font-weight: 700;
}

.project-description {
  margin-bottom: 2em;
  width: 75%;
}

.contact h2.title {
  margin-top: 2em;
}

.networks-container {
  display: inline-flex;
  width: 250px;
  justify-content: space-between;
  align-items: center;
}
/* ********************** */
/* **** VIDEO STYLE **** */
/* ******************** */
.work-video {
  height: 100%;
  width: 75%;
}

.work-video iframe {
  min-height: 750px;
  height: auto;
  max-height: 1000px;
}

.work-video iframe #player {
  border-radius: var(--border-radius-sm);
}
/* ********************* */
/* *** SWIPER STYLE *** */
/* ******************* */

.swiper {
  width: 75%;
  margin-left: 0!important;
  margin-right: 0!important;
  height: auto;
  max-height: 1000px;
  margin-bottom: 6em;
  border-radius: var(--border-radius-sm);
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  max-width: 100%!important;
  background-color: var(--color-background-soft);

  /* Center slide text vertically */
  display: flex;
  justify-content: center;
  align-items: center;
}

.swiper-slide img {
  width: 100%;
  max-height: 100%;
  object-fit: contain;
}

.swiper-pagination-bullet-active {
  background-color: var(--color-text)!important;
  border: 1px solid #fff;
}

.swiper-pagination-bullet {
  border: 1px solid #fff;
}

@media (prefers-color-scheme: dark) {
  a {
    color: var(--vt-c-text-dark-2);
  }
  .introduction svg.home-logo path {
    fill: var(--vt-c-text-dark-1);
  }
  a.nav-link, a.nav-link:active, a.nav-link:hover {
    color: var(--vt-c-text-dark-1);
  }
  .single-project {
    box-shadow: rgba(255, 255, 255, 0.1) 0px 4px 12px;;
  }
  .light-grey {
    color: var(--vt-c-text-dark-2);
  }
}

@media (max-width: 1279px) {
  .swiper {
    width: 100%;
    height: auto;
  }

  .project-description {
    width: 100%;
  }
}

@media (max-width: 1024px) {
  .nav-container {
    margin-bottom: 3.5em;
  }
}

@media (max-width: 760px) {

  .swiper {
    width: 100%;
    height: auto;
  }

  .homeview {
    display: flex;
    justify-content: center;
    align-items: center;
  }

}

@media (max-width: 460px) {
  body {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  body:has(.homeview) {
    overflow: hidden;
    justify-content: flex-start;
  }

  body:has(.contact) {
    overflow: hidden;
    justify-content: flex-start;
  }

  .nav-container {
    width: 100%;
    margin-bottom: 0;
    border: none;
    border-top: 1px solid var(--color-border);
    border-radius: 8px 8px 0 0;
    height: 200px;
    bottom: -135px;
  }
  .works {
    min-height: 100vh;
  }
  .works .title {
    margin-top: 1em;
  }
  .contact .title{
  margin-top: 1em;
  }
  .works-container {
    justify-content: center;
    margin-bottom: 4em;
  }

  .single-project {
    min-width: 350px;
    margin: 0 0 1em 0;
  }
}


@media (max-width: 380px) {
  .single-project {
    min-width: 260px;
  }
}

@media (max-width: 717px) and (max-height: 512px) {
  .nav-container {
    width: 100%;
    margin-bottom: 0;
    border: none;
    border-top: 1px solid var(--color-border);
    border-radius: 8px 8px 0 0;
    height: 200px;
    bottom: -135px;
  }
}

